--- a/Healthtechbd/ForgotPasswordWindow.xaml
+++ b/Healthtechbd/ForgotPasswordWindow.xaml
@@ -17,10 +17,10 @@
             <TextBlock Text="FORGOT PASSWORD"  Foreground="#545454" FontSize="25" TextAlignment="Center" ></TextBlock>
             <Separator/>
             <!--Email-->
-            <TextBox Style="{StaticResource InputField}" Text="Email Address"    />
+            <TextBox x:Name="EmailAddress" Style="{StaticResource InputField}" Text="Email Address" LostFocus="EmailAddress_LostFocus" GotFocus="EmailAddress_GotFocus" />
 
             <!--Login Button-->
-                <Button Content="SUBMIT" Foreground="#fff" Background="#3CC2BB" Margin="0 0 0 10" Padding="9" Height="38" BorderBrush="#eee" BorderThickness="0"></Button>
+                <Button x:Name="SubmitForgotPassword" Content="SUBMIT" Foreground="#fff" Background="#3CC2BB" Margin="0 0 0 10" Padding="9" Height="38" BorderBrush="#eee" BorderThickness="0" Click="SubmitForgotPassword_Click"></Button>
 
             <!--Login-->
             <Grid Margin="0 15 0 0">
