--- a/Healthtechbd/App.xaml
+++ b/Healthtechbd/App.xaml
@@ -21,8 +21,26 @@
                 <Setter Property="Margin"  Value="0 5 0 25"/>
             </Style>
 
+            <Style TargetType="PasswordBox">
+                <Setter Property="Foreground" Value="#7d7d7d"/>
+                <Setter Property="BorderBrush" Value="#eee"/>
+                <Setter Property="Margin" Value="0 0 0 14"/>
+                <Setter Property="Height" Value="40" />
+                <Setter Property="Padding" Value="9" />
+                <Setter Property="FontSize" Value="14" />
+            </Style>
+          
             <!--InputField-->
             <Style TargetType="TextBox" x:Key="InputField" >
+                <Setter Property="Foreground" Value="#7d7d7d"/>
+                <Setter Property="BorderBrush" Value="#eee"/>
+                <Setter Property="Margin" Value="0 0 0 14"/>
+                <Setter Property="Height" Value="40" />
+                <Setter Property="Padding" Value="9" />
+                <Setter Property="FontSize" Value="14" />
+            </Style>
+
+            <Style TargetType="ComboBox" x:Key="ComboBox" >
                 <Setter Property="Foreground" Value="#7d7d7d"/>
                 <Setter Property="BorderBrush" Value="#eee"/>
                 <Setter Property="Margin" Value="0 0 0 14"/>
