--- a/Healthtechbd/ChangePassword.xaml
+++ b/Healthtechbd/ChangePassword.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Healthtechbd"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      d:DesignHeight="550" d:DesignWidth="800"
       Title="ChangePassword">
 
     <StackPanel>
@@ -28,7 +28,7 @@
 
         </Grid>
 
-        <Border Margin="20" Height="430">
+        <Border Margin="20" Height="390">
             <StackPanel>
 
                 <!--Panel Head-->
@@ -47,14 +47,14 @@
                                 <RowDefinition></RowDefinition>
                             </Grid.RowDefinitions>
 
-                            <StackPanel Grid.Row="0"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Password"/>
-                                <TextBox Style="{StaticResource InputField}" Text=""/>
+                            <StackPanel Grid.Row="0" Margin="5 0">
+                                <TextBlock Style="{StaticResource Level}" Text="Password *"/>
+                                <PasswordBox x:Name="Password" />
                             </StackPanel>
 
                             <StackPanel Grid.Row="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Confirm Password"/>
-                                <TextBox Style="{StaticResource InputField}" Text=""/>
+                                <TextBlock Style="{StaticResource Level}" Text="Confirm Password *"/>
+                                <PasswordBox x:Name="ConfirmPassword"/>
                             </StackPanel>
 
                         </Grid>
@@ -69,7 +69,7 @@
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitChangePassword_Click" />
+                <Button x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" />
                 <Button x:Name="SubmitChangePassword" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitChangePassword_Click" />
             </StackPanel>
 
