--- a/Healthtechbd/EditDiagnosisTemplate.xaml
+++ b/Healthtechbd/EditDiagnosisTemplate.xaml
@@ -1,10 +1,9 @@
-﻿<Page x:Class="Healthtechbd.AddDiagnosisTemplate"
+﻿<Page x:Class="Healthtechbd.EditDiagnosisTemplate"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
       Title="Add Diagnosis Template">
@@ -20,7 +19,7 @@
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Add Diagnosis Template"/>
                 </StackPanel>
             </Border>
-            
+
         </Grid>
 
         <!--Page Heading Bottom-->
@@ -50,14 +49,15 @@
                             </Grid.ColumnDefinitions>
 
                             <StackPanel Grid.Row="0" Grid.Column="0" Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Diagnosis Name *"/>
+                                <TextBlock Style="{StaticResource Level}" Text="Diagnosis Name"/>
                                 <ComboBox x:Name="DiagnosisComboBox" Style="{StaticResource ComboBox}" SelectedIndex="0">
-                                    <ComboBoxItem>Select</ComboBoxItem>                                                                                          
+                                    <ComboBoxItem>Select</ComboBoxItem>
                                 </ComboBox>
+                                <!--<TextBox Style="{StaticResource InputField}" Text=""/>-->
                             </StackPanel>
 
                             <StackPanel Grid.Row="0" Grid.Column="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Instructions *"/>
+                                <TextBlock Style="{StaticResource Level}" Text="Instructions"/>
                                 <TextBox x:Name="Instruction" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
@@ -70,6 +70,8 @@
                                 <TextBlock Style="{StaticResource Level}" Text="Tests"/>
                                 <TextBox Style="{StaticResource InputField}" Height="100" Text=""/>
                             </StackPanel>
+
+                            <TextBox x:Name="DiagnosisTemplateId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
 
                         </Grid>
                     </Border>
@@ -84,7 +86,7 @@
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
                 <Button x:Name="CancelAddDiagnosisTemplate" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddDiagnosisTemplate_Click"/>
-                <Button x:Name="SubmitAddDiagnosisTemplate" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddDiagnosisTemplate_Click" />
+                <Button x:Name="SubmitAddDiagnosisTemplate" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddDiagnosisTemplate_Click" />
             </StackPanel>
 
         </Grid>
