--- a/Healthtechbd/EditPatient.xaml
+++ b/Healthtechbd/EditPatient.xaml
@@ -1,26 +1,24 @@
-﻿<Page x:Class="Healthtechbd.AddDiagnosisTemplate"
+﻿<Page x:Class="Healthtechbd.EditPatient"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
-      Title="Add Diagnosis Template">
+      Title="Edit Patient">
 
     <StackPanel>
         <!--Page Heading-->
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
-
             <Border Margin="20 0 0 0">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Diagnosis Templates" MouseDown="CancelAddDiagnosisTemplate_Click" />
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Patients" MouseDown="CancelUpdatePatient_Click" />
                     <TextBlock Style="{StaticResource BreadcrumbItem}" Text="/" />
-                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Add Diagnosis Template"/>
+                    <TextBlock Style="{StaticResource BreadcrumbItem}" Text="Edit Patient"/>
                 </StackPanel>
             </Border>
-            
+
         </Grid>
 
         <!--Page Heading Bottom-->
@@ -29,7 +27,7 @@
 
                 <!--Panel Head-->
                 <Grid Height="40" Background="#F6F8F7">
-                    <TextBlock Text="Add Diagnosis Template" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
+                    <TextBlock Text="Edit Patient" Margin="15 0 0 0" FontSize="14" VerticalAlignment="Center" Foreground="#333" />
                 </Grid>
 
                 <!--Info Area-->
@@ -50,26 +48,31 @@
                             </Grid.ColumnDefinitions>
 
                             <StackPanel Grid.Row="0" Grid.Column="0" Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Diagnosis Name *"/>
-                                <ComboBox x:Name="DiagnosisComboBox" Style="{StaticResource ComboBox}" SelectedIndex="0">
-                                    <ComboBoxItem>Select</ComboBoxItem>                                                                                          
-                                </ComboBox>
+                                <TextBlock Style="{StaticResource Level}" Text="Name *"/>
+                                <TextBox x:Name="PatientName" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
                             <StackPanel Grid.Row="0" Grid.Column="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Instructions *"/>
-                                <TextBox x:Name="Instruction" Style="{StaticResource InputField}" Text=""/>
+                                <TextBlock Style="{StaticResource Level}" Text="Phone *"/>
+                                <TextBox x:Name="PatientPhone" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1" Grid.Column="0"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Medicines"/>
-                                <TextBox Style="{StaticResource InputField}" Height="100" Text=""/>
+                                <TextBlock Style="{StaticResource Level}" Text="Email"/>
+                                <TextBox x:Name="PatientEmail" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1" Grid.Column="1"  Margin="5 0">
-                                <TextBlock Style="{StaticResource Level}" Text="Tests"/>
-                                <TextBox Style="{StaticResource InputField}" Height="100" Text=""/>
+                                <TextBlock Style="{StaticResource Level}" Text="Age *"/>
+                                <TextBox x:Name="PatientAge" Style="{StaticResource InputField}" Text=""/>
                             </StackPanel>
+
+                            <StackPanel Grid.Row="2" Grid.Column="0"  Margin="5 0">
+                                <TextBlock Style="{StaticResource Level}" Text="Address"/>
+                                <TextBox x:Name="PatientAddress" Style="{StaticResource InputField}" Text=""/>
+                            </StackPanel>
+
+                            <TextBox x:Name="PatientId" Visibility="Hidden" Style="{StaticResource InputField}" Text=""/>
 
                         </Grid>
                     </Border>
@@ -83,8 +86,8 @@
         <Grid Height="60" Background="#E3E7EB" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelAddDiagnosisTemplate" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddDiagnosisTemplate_Click"/>
-                <Button x:Name="SubmitAddDiagnosisTemplate" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddDiagnosisTemplate_Click" />
+                <Button x:Name="CancelUpdatePatient" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35" Background="#3CC2BB" Click="CancelUpdatePatient_Click" />
+                <Button x:Name="SubmitUpdatePatient" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdatePatient_Click" />
             </StackPanel>
 
         </Grid>
