--- a/Healthtechbd/ResetPasswordWindow.xaml
+++ b/Healthtechbd/ResetPasswordWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Healthtechbd.MainWindow"
+﻿<Window x:Class="Healthtechbd.ResetPasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,31 +6,35 @@
         xmlns:local="clr-namespace:Healthtechbd"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="600" Width="1200" WindowStartupLocation="CenterScreen" Closed="Window_Closed" >
-   
+        Title="ResetPasswordWindow" Height="600" Width="1200" WindowStartupLocation="CenterScreen" Closed="Window_Closed" >
+
 
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="images/login-bg.jpg" Stretch="UniformToFill"/>
         </Grid.Background>
 
-        <Border Padding="40" Height="340" Width="475" BorderBrush="#eee" BorderThickness="1" Background="#fff">
+        <Border Padding="40" Height="370" Width="475" BorderBrush="#eee" BorderThickness="1" Background="#fff">
             <StackPanel>
 
-                <TextBlock Text="LOGIN" Foreground="#545454" FontSize="25" TextAlignment="Center" ></TextBlock>
+                <TextBlock Text="RESET PASSWORD" Foreground="#545454" FontSize="25" TextAlignment="Center" ></TextBlock>
                 <Separator/>
 
-                <!--Email-->
-                <TextBox x:Name="EmailAddress" Style="{StaticResource InputField}" Text="Email Address" GotFocus="EmailAddress_GotFocus" LostFocus="EmailAddress_LostFocus" />
-
                 <!--Password-->
-                <PasswordBox x:Name="Password" Password="Password" GotFocus="Password_GotFocus" LostFocus="Password_LostFocus"  />
-                
+                <TextBlock Style="{StaticResource Level}" Text="Password"/>
+                <PasswordBox x:Name="Password"/>
+
+                <!--Confirm Password-->
+                <TextBlock Style="{StaticResource Level}" Text="Confirm Password"/>
+                <PasswordBox x:Name="ConfirmPassword" Password="" />
+
+                <TextBox x:Name="EmailAddress" Visibility="Hidden"/>
+                <Button x:Name="ButtonResetPassword" Content="RESET" Foreground="#fff" Background="#3CC2BB" Margin="0 -15 0 10" Padding="9" Height="38" BorderBrush="#eee" BorderThickness="0" Click="ButtonResetPassword_Click" />
+
                 <!--Login Button-->
-                <Button x:Name="ButtonLogin" Content="LOGIN" Foreground="#fff" Background="#3CC2BB" Margin="0 0 0 10" Padding="9" Height="38" BorderBrush="#eee" BorderThickness="0" Click="ButtonLogin_Click" />
 
                 <!--Registration & Forgot Password-->
-                <Grid Margin="0 15 0 0">
+                <!--<Grid Margin="0 15 0 0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
@@ -41,13 +45,13 @@
                     </StackPanel>
 
                     <StackPanel Grid.Column="1">
-                        <TextBlock Style="{StaticResource RegistrationLink}" x:Name="forgotPasswordLink" Text="Forgot Password" TextAlignment="Right" MouseDown="forgotPasswordLink_MouseDown"/>
+                        <TextBlock Style="{StaticResource RegistrationLink}" x:Name="forgotPasswordLink" Text="Login" TextAlignment="Right" MouseDown="forgotPasswordLink_MouseDown"/>
                     </StackPanel>
-                </Grid>
+                </Grid>-->
 
             </StackPanel>
         </Border>
-        <Border Height="5" Background="#37B5AE" Width="475" Margin="0 338 0 0">
+        <Border Height="5" Background="#37B5AE" Width="475" Margin="358,469,358,95">
 
         </Border>
     </Grid>
