--- a/Healthtechbd/Diagnosis.xaml
+++ b/Healthtechbd/Diagnosis.xaml
@@ -33,7 +33,7 @@
                             <ColumnDefinition Width="80"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
-                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" />
+                        <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" TextChanged="searchField_TextChanged" />
                         <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
